# pcd-viewer

./: .gitignore  CMakeLists.txt  README.md
include/: folder_parser.h
script/: postinst.in
share/: pcd-viewer.desktop
src/: CMakeLists.txt  test_folder_parser.cpp  viewer.cpp
src/source/: folder_parser.cpp
